add loaders, basevewmodel, baseactivity

--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation "com.microsoft.signalr:signalr:3.0.0-preview4-19216-03"
     implementation "com.github.salomonbrys.kotson:kotson:2.5.0"
 
-
+    //Utils
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
