--- a/build.gradle
+++ b/build.gradle
@@ -76,4 +76,17 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7:0.10.8"
     implementation "org.jetbrains.anko:anko-sdk25-coroutines:0.10.8"
     implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:0.10.8"
+
+    // Testing
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "androidx.test:runner:1.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.google.truth:truth:0.44"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0"
+    testImplementation "org.mockito:mockito-inline:2.13.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.1"
+    // TODO Migrate from JUnit4 to JUnit5
+    testImplementation "io.kotlintest:kotlintest-runner-junit5:3.4.2"
+
 }
